--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                 <div class="card card-body">
                                     <div class="edu-header row align-items-center">
                                         <div class="col-4">
-                                            <img src="images/nyu-logo.png" class="card-img-top work-logo rounded mx-auto d-block" alt="nyu-logo">
+                                            <img src="images/nyu-logo.png" class="card-img-top workplace-logo rounded mx-auto d-block" alt="nyu-logo">
                                         </div>
                                         <div class="col-8">
                                             <h5 class="card-title">New York University</h5>
@@ -317,7 +317,7 @@
                                 <div class="card card-body">
                                     <div class="row align-items-center">
                                         <div class="col-4">
-                                            <img src="images/pace_logo.gif" class="card-img-top work-logo rounded mx-auto d-block" alt="nyu-logo">
+                                            <img src="images/pace_logo.gif" class="card-img-top workplace-logo rounded mx-auto d-block" alt="pace-logo">
                                         </div>
                                         <div class="col-8">
                                             <h5 class="card-title">Pace University</h5>
