Updated developer progress bars for 2022

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                     </p>
                     <p id="contact">
                         You can find me on <a class="hover-photo-text" href="https://github.com/sebastianromerocruz">GitHub</a> if you
-                        would like to check out my work, or shoot me an <a class="hover-photo-text" href="mailto: sebastianromerocruz@gmail.com">e-mail</a>.
+                        would like to check out my work.
                     </p>
                     <p id="resume">
-                        You can also find me on LinkedIn <a class="hover-photo-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">here</a> if you'd prefer.
+                        You can also find me on LinkedIn <a class="hover-photo-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">here</a>, or shoot me an <a class="hover-photo-text" href="mailto: sebastianromerocruz@gmail.com">e-mail</a> if you'd prefer.
                     </p>
 
                     <footer>
@@ -105,7 +105,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    A historical allusion. It's just the alias I use when working on projects, as a kind of motivator. The name is based on the <em>Cabinet Historique et Topographique Militaire</em>, a small, highly efficient
+                                    This is literally just the alias I use when working on projects, as a kind of motivator. The name is based on the <em>Cabinet Historique et Topographique Militaire</em>, a small, highly efficient
                                     organization within the war ministry of the First French Republic, where Napoleon Bonaparte briefly worked in 1795. I like French history, that's it.
                                 </div>
                             </div>
@@ -129,10 +129,10 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="ranking text-left">prior exposure</p>
+                                        <p class="ranking text-left">playing with it</p>
                                     </div>
                                     <div class="col-sm-4">
-                                        <p class="ranking text-center">intermediate</p>
+                                        <p class="ranking text-center">i can teach it</p>
                                     </div>
                                     <div class="col-sm-4">
                                         <p class="ranking text-right">fluent</p>
@@ -151,23 +151,13 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-2"><i class="fab fa-html5 fa-2x skill-logo"></i></div>
+                            <div class="col-sm-2"><i class="fab fa-java fa-2x skill-logo"></i></div>
                             <div class="col-sm-10">
                                 <div class="progress">
-                                    <div class="progress-bar html-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">html</div>
+                                    <div class="progress-bar java-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">java</div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col-sm-2"><i class="fab fa-css3-alt fa-2x skill-logo"></i></div>
-                            <div class="col-sm-10">
-                                <div class="progress">
-                                    <div class="progress-bar css-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">css</div>
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="row">
                             <div class="col-sm-2"><i class="fab fa-js-square fa-2x skill-logo"></i></div>
                             <div class="col-sm-10">
@@ -176,44 +166,49 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="row">
-                            <div class="col-sm-2"><i class="fab fa-java fa-2x skill-logo"></i></div>
+                            <div class="col-sm-2"><i class="fab fa-swift fa-2x skill-logo"></i></div>
                             <div class="col-sm-10">
                                 <div class="progress">
-                                    <div class="progress-bar java-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">java</div>
+                                    <div class="progress-bar swift-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">swift</div>
                                 </div>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col-sm-2">
-                                <p class="skill-logo">C#</p>
+                                <p class="skill-logo">C++</p>
                             </div>
                             <div class="col-sm-10">
                                 <div class="progress">
-                                    <div class="progress-bar c-sharp-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">C#</div>
+                                    <div class="progress-bar cpp-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">c++</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-2"><i class="fab fa-rust fa-2x skill-logo"></i></div>
+                            <div class="col-sm-10">
+                                <div class="progress">
+                                    <div class="progress-bar rust-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">rust</div>
                                 </div>
                             </div>
                         </div>
                         <hr>
                         <p>Frameworks and Libraries</p>
                         <div class="row">
-                            <div class="col-sm-2"><i class="fab fa-bootstrap fa-2x skill-logo"></i></div>
+                            <div class="col-sm-2">
+                                <p class="skill-logo">GL</p>
+                            </div>
                             <div class="col-sm-10">
                                 <div class="progress">
-                                    <div class="progress-bar bootstrap-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">bootstrap</div>
+                                    <div class="progress-bar opengl-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">opengl</div>
                                 </div>
                             </div>
                         </div>
-
                         <div class="row">
-                            <div class="col-sm-2">
-                                <p class="skill-logo">jQ</p>
-                            </div>
+                            <div class="col-sm-2"><i class="fab fa-react fa-2x skill-logo"></i></div>
                             <div class="col-sm-10">
                                 <div class="progress">
-                                    <div class="progress-bar jquery-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">jQuery</div>
+                                    <div class="progress-bar react-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">react</div>
                                 </div>
                             </div>
                         </div>
@@ -421,10 +416,10 @@
                     <div class="japanese d-none">
                         <h1>Hi, I'm Sebastián. (🇯🇵)</h1>
                         <p class="japanese-text">
-                            NYCで、<span class="hover-photo-text japanese-text">開発者</span>兼大学教授として働いています。
+                            NYCで、<span class="hover-photo-text japanese-text">大学教授</span>兼<span class="hover-photo-text japanese-text">開発者</span>として働いています。
                         </p>
                         <p class="japanese-text">
-                            私は<span class="hover-photo-text japanese-text">メキシコ</span>出身で、<span class="hover-photo-text japanese-text">ニューヨーク大学</span>において化学工学とコンピューター科学を、勉強しました。
+                            私は<span class="hover-photo-text japanese-text">メキシコ</span>出身で、<span class="hover-photo-text japanese-text">ニューヨーク大学</span>において勉強しました。
                         </p>
                         <p class="japanese-text">
                             データの可視化など、ビジュアルで創造的な分野で上達できる仕事に秀でますが、<span class="hover-photo-text">他</span>の<span class="hover-photo-text">領域</span>に経験もあります。
@@ -434,10 +429,10 @@
                                 class="hover-photo-text japanese-text">弓道</span>です。
                         </p>
                         <p class="japanese-text">
-                            <span class="hover-photo-text japanese-text">メール</span>も、<a class="hover-photo-text japanese-text" href="https://www.linkedin.com/in/sebastian-romerocruz/">LinkedIn</a>もやっています。
+                            私の<span class="hover-photo-text japanese-text">Github</span>にご興味のある方はぜひご覧になって下さい
                         </p>
                         <p class="japanese-text">
-                            私の<span class="hover-photo-text japanese-text">履歴書</span>にご興味のある方はぜひご覧になって下さい。
+                            <span class="hover-photo-text japanese-text">LinkedIn</span>も、<span class="hover-photo-text japanese-text">メール</span>もやっています。
                         </p>
                     </div>
 
