Changed other experience section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         York, where I studied at <span onclick="location='#linked-to-text'" class="hover-photo-text" id="education">NYU</span>.
                     </p>
                     <p id="explanation">
-                        Although I prefer to do work that lets me excel in creative fields, such as data visualization, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span class="hover-photo-text"
+                        Although I mostly deal in the <a class="hover-photo-text" href="https://github.com/sebastianromerocruz/CS505-material">introductary</a> and game programming pedagogy space, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span class="hover-photo-text"
                             id="pitchfork">areas</span> of computer science.
                     </p>
                     <p id="hobbies">
@@ -340,44 +340,6 @@
 
                             </div>
                         </div>
-                        <!-- <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title exp-card-title">NYU Tandon School of Engineering</h5>
-                                <p class="card-text">Adjunct Professor</p>
-                                <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i><p class="skill-logo skill-logo exp-logo" style="display:inline-block;">C++</p></li>
-                                <li class="list-group-item">
-                                    <span class="card-text" style="font-weight: bold; font-style: italic;">Intro to Problem Solving and Programming</span><br></br>
-
-                                    <span class="card-text">Instructing 2 lecture sections and 6 laboratory sections across a total of 200+ students, providing introductary practical application of Python programming.<span>
-                                </li>
-                                <li class="list-group-item">
-                                    <span style="font-weight: bold; font-style: italic;">Intro to Game Programming</span><br></br>
-
-                                    Instructing the fundamentals of interactive computer games as cross-platform applications using C++ and the OpenGL library.
-                                </li>
-                            </ul>
-                            <div class="card-body">
-                                <h5 class="card-title exp-card-title">Pace University</h5>
-                                <p class="card-text">Adjunct Professor</p>
-                                <p class="exp-dates">Brooklyn, N.Y. (January 2020 — Present)</p>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i><p class="skill-logo skill-logo exp-logo" style="display:inline-block;">C++</p></li>
-                                <li class="list-group-item">
-                                    <span class="card-text" style="font-weight: bold; font-style: italic;">Intro to Problem Solving and Programming</span><br></br>
-
-                                    <span class="card-text">Instructing 2 lecture sections and 6 laboratory sections across a total of 200+ students, providing introductary practical application of Python programming.<span>
-                                </li>
-                                <li class="list-group-item">
-                                    <span style="font-weight: bold; font-style: italic;">Intro to Game Programming</span><br></br>
-
-                                    Instructing the fundamentals of interactive computer games as cross-platform C++ applications using C++ and the OpenGL library.
-                                </li>
-                            </ul>
-                        </div> -->
                     </div>
                     <div id="experience-skan" class="skandinaviska d-none">
                         <div class="card">
@@ -406,7 +368,7 @@
                                 <li class="list-group-item"><i class="fab fa-python fa-2x skill-logo exp-logo"></i> <i class="fab fa-docker fa-2x skill-logo exp-logo"></i> <i class="fab fa-js-square fa-2x skill-logo exp-logo"></i></li>
                                 <li class="list-group-item">Lead a team of 5 towards creating an automatic, fully scalable quantitative music scoring service using natural language processing (NLP) of 18,393 music reviews using <strong>Apache
                                         Spark</strong>.</li>
-                                <li class="list-group-item">Developed a logistic regression machine-learning model that maximized the multi-class classification F-measure of the model to 0.383, improving on the original linear regression model</li>
+                                <li class="list-group-item">Developed a logistic regression machine-learning model that maximized the multi-class classification F-measure of the model to 0.383, improving on the original linear regression model.</li>
                             </ul>
                         </div>
                     </div>
@@ -429,7 +391,7 @@
                                 class="hover-photo-text japanese-text">弓道</span>です。
                         </p>
                         <p class="japanese-text">
-                            私の<span class="hover-photo-text japanese-text">Github</span>にご興味のある方はぜひご覧になって下さい
+                            私の<span class="hover-photo-text japanese-text">Github</span>にご興味のある方はぜひご覧になって下さい。
                         </p>
                         <p class="japanese-text">
                             <span class="hover-photo-text japanese-text">LinkedIn</span>も、<span class="hover-photo-text japanese-text">メール</span>もやっています。
