--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             私は<span class="hover-photo-text japanese-text">メキシコ</span>出身で、<span class="hover-photo-text japanese-text">ニューヨーク大学</span>において勉強しました。
                         </p>
                         <p class="japanese-text">
-                            データの可視化など、ビジュアルで創造的な分野で上達できる仕事に秀でますが、<span class="hover-photo-text">他</span>の<span class="hover-photo-text">領域</span>に経験もあります。
+                            <span class="hover-photo-text">初級プログラミング</span>と、ゲームプログラミングの教育の仕事を大体していますが、<span class="hover-photo-text">他</span>の<span class="hover-photo-text">領域</span>に経験もあります。
                         </p>
                         <p class="japanese-text">
                             私の趣味は、<span class="hover-photo-text japanese-text" style="color: #ffc2c2; border-bottom: solid 0px;">外国語</span>の学習、<span class="hover-photo-text japanese-text">音楽</span>、そして<span
