--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <!-- Required meta tags -->
-    <!-- Please update. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -76,7 +75,7 @@
                         York, where I studied at <span onclick="location='#linked-to-text'" class="hover-photo-text" id="education">NYU</span>.
                     </p>
                     <p id="explanation">
-                        Although I mostly deal in the <a class="hover-photo-text" href="https://github.com/sebastianromerocruz/CS505-material">introductory</a> and game programming pedagogy space, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span class="hover-photo-text"
+                        Although I mostly deal in the <a class="hover-photo-text" href="https://github.com/sebastianromerocruz/CS505-material">intro</a> and game programming pedagogy space, I also have experience in <span class="hover-photo-text" id="skandinaviska">other</span> <span class="hover-photo-text"
                             id="pitchfork">areas</span> of computer science.
                     </p>
                     <p id="hobbies">
