--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-2"><i class="fab fa-rust fa-2x skill-logo"></i></div>
+                            <div class="col-sm-2"><p class="skill-logo">ASM</p></i></div>
                             <div class="col-sm-10">
                                 <div class="progress">
-                                    <div class="progress-bar rust-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">rust</div>
+                                    <div class="progress-bar mos6502-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">6502 asm</div>
                                 </div>
                             </div>
                         </div>
